Added extent report