@@ -24,7 +24,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.14.1</version>
 				<configuration>
-					<release>22</release>
+					<release>22</release> <!-- or your JDK version -->
+					<compilerArgs>
+						<!-- Explicitly enable annotation processing -->
+						<arg>-proc:full</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
